--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_PORT=
+DB_HOST=localhost
+DB_USER=admin
+DB_PASSWORD=root
+DB_NAME=test_db
+DB_PORT=5432
 TWILIO_ACCOUNT_SID=
 TWILIO_AUTH_TOKEN=
 TWILIO_PHONE_NUMBER=
